Add open color palette as a read only color set
